# discord-rich-presence

./: Cargo.toml
src/: discord_ipc.rs  ipc_windows.rs
